docs: update DARTS tutorial example for exp learning curve

--- a/docs/User Guide/Theorists/DARTS/example.ipynb
+++ b/docs/User Guide/Theorists/DARTS/example.ipynb
@@ -7,7 +7,11 @@
     "\n",
     "## Tutorial: Recovering the exponential learning curve model\n",
     "\n",
-    "In this tutorial, we'll learn how to use Differentiable Architecture Search (DARTS) as a theorist to recover the exponential learning curve model."
+    "In this tutorial, we'll learn how to use Differentiable Architecture Search (DARTS) as a theorist to recover the exponential learning curve model.\n",
+    "\n",
+    "### Installing AutoRA\n",
+    "\n",
+    "We begin with installing AutoRA via the pip package manager, and then import the relevant modules:"
    ],
    "metadata": {
     "collapsed": false
@@ -18,8 +22,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Uncomment the following line when running on Google Colab\n",
-    "# !pip install autora"
+    "!pip install autora\n",
+    "\n",
+    "import numpy as np\n",
+    "from autora.variable import DV, IV, ValueType, VariableCollection\n",
+    "from autora.skl.darts import DARTSRegressor"
    ],
    "metadata": {
     "collapsed": false
@@ -28,8 +35,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Let's generate a simple data set with two features $x_1, x_2 \\in [0, 1]$ and a target $y$. We will use the following generative model:\n",
-    "$y = 2 x_1 - e^{(5 x_2)}$"
+    "### Generating Data\n",
+    "\n",
+    "Next, we generate a relevant data set. We'll start by setting the relevant meta-parameter, which is the level of noise to add to the ground-truth model."
    ],
    "metadata": {
     "collapsed": false
@@ -37,20 +45,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "# general meta parameters\n",
+    "added_noise = 0.01"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Next, we set the specific parameters for the exponential learning curve model"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# exponential learning curve parameters\n",
+    "exp_learning_resolution = 100\n",
+    "exp_learning_minimum_trial = 1\n",
+    "exp_learning_maximum_trial = exp_learning_resolution\n",
+    "exp_learning_minimum_initial_value = 0\n",
+    "exp_learning_maximum_initial_value = 0.5\n",
+    "exp_learning_lr = 0.03\n",
+    "exp_learning_p_asymptotic = 1.0"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We then set up the ground-truth model. To do so, we first define our metadata"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def exp_learning_metadata():\n",
+    "    p_initial = IV(\n",
+    "        name=\"P_asymptotic\",\n",
+    "        allowed_values=np.linspace(exp_learning_minimum_initial_value,\n",
+    "                                   exp_learning_maximum_initial_value,\n",
+    "                                   exp_learning_resolution),\n",
+    "        value_range=(exp_learning_minimum_initial_value,\n",
+    "                     exp_learning_maximum_initial_value),\n",
+    "        units=\"performance\",\n",
+    "        variable_label=\"Asymptotic Performance\",\n",
+    "        type=ValueType.REAL\n",
+    "    )\n",
     "\n",
-    "x_1 = np.linspace(0, 1, num=10)\n",
-    "x_2 = np.linspace(0, 1, num=10)\n",
-    "X = np.array(np.meshgrid(x_1, x_2)).T.reshape(-1,2)\n",
+    "    trial = IV(\n",
+    "        name=\"trial\",\n",
+    "        allowed_values=np.linspace(exp_learning_minimum_trial,\n",
+    "                                   exp_learning_maximum_trial,\n",
+    "                                   exp_learning_resolution),\n",
+    "        value_range=(exp_learning_minimum_trial,\n",
+    "                     exp_learning_maximum_trial),\n",
+    "        units=\"trials\",\n",
+    "        variable_label=\"Trials\",\n",
+    "        type=ValueType.REAL\n",
+    "    )\n",
     "\n",
-    "y = 2 * X[:,0] + np.exp(5 * X[:,1])"
-   ]
+    "    performance = DV(\n",
+    "        name=\"performance\",\n",
+    "        value_range=(0, exp_learning_p_asymptotic),\n",
+    "        units=\"performance\",\n",
+    "        variable_label=\"Performance\",\n",
+    "        type=ValueType.REAL\n",
+    "    )\n",
+    "\n",
+    "    metadata = VariableCollection(\n",
+    "        independent_variables=[p_initial, trial],\n",
+    "        dependent_variables=[performance],\n",
+    "    )\n",
+    "\n",
+    "    return metadata"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Then we define our synthetic experiment"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def exp_learning_experiment(X: np.ndarray,\n",
+    "                             p_asymptotic: float = exp_learning_p_asymptotic,\n",
+    "                             lr: float = exp_learning_lr,\n",
+    "                             std = added_noise):\n",
+    "    Y = np.zeros((X.shape[0],1))\n",
+    "\n",
+    "    for idx, x in enumerate(X):\n",
+    "        p_initial = x[0]\n",
+    "        trial = x[1]\n",
+    "        y = p_asymptotic - (p_asymptotic - p_initial) * np.exp(- lr * trial) + np.random.normal(0, std)\n",
+    "        Y[idx] = y\n",
+    "\n",
+    "    return Y"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Finally, we define how to generate synthetic data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def exp_learning_data(metadata):\n",
+    "\n",
+    "    p_initial_values = metadata.independent_variables[0].allowed_values\n",
+    "    trial_values = metadata.independent_variables[1].allowed_values\n",
+    "\n",
+    "    X = np.array(np.meshgrid(p_initial_values, trial_values)).T.reshape(-1,2)\n",
+    "    y = exp_learning_experiment(X, std=0)\n",
+    "\n",
+    "    return X, y"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "With these functions defined, we can now create a data set from a noisy ground-truth model"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "X, y = exp_learning_data(exp_learning_metadata())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -107,8 +275,6 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "from autora.skl.darts import DARTSRegressor\n",
-    "\n",
     "darts_estimator = DARTSRegressor(\n",
     "    num_graph_nodes=1,\n",
     "    arch_updates_per_epoch=1,\n",
