--- a/docs/User Guide/Theorists/DARTS/example.ipynb
+++ b/docs/User Guide/Theorists/DARTS/example.ipynb
@@ -65,6 +65,13 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
