docs: recreate DARTS simple example.ipynb

--- a/docs/User Guide/Theorists/DARTS/example.ipynb
+++ b/docs/User Guide/Theorists/DARTS/example.ipynb
@@ -1,13 +1,207 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Differentiable Architecture Search\n",
+    "\n",
+    "## Example\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Uncomment the following line when running on Google Colab\n",
+    "# !pip install autora"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Let's generate a simple data set with two features $x_1, x_2 \\in [0, 1]$ and a target $y$. We will use the following generative model:\n",
+    "$y = 2 x_1 - e^{(5 x_2)}$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x_1 = np.linspace(0, 1, num=10)\n",
+    "x_2 = np.linspace(0, 1, num=10)\n",
+    "X = np.array(np.meshgrid(x_1, x_2)).T.reshape(-1,2)\n",
+    "\n",
+    "y = 2 * X[:,0] + np.exp(5 * X[:,1])\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now let us define the search space, that is, the space of operations to consider when searching over the space of computation graphs."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "primitives = [\n",
+    "    \"none\",\n",
+    "    \"add\",\n",
+    "    \"subtract\",\n",
+    "    'mult',\n",
+    "    \"logistic\",\n",
+    "    'exp',\n",
+    "    'relu',\n",
+    "]\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Set up the DARTS Regressor\n",
+    "\n",
+    "We will use the DARTS Regressor to predict the outcomes. There are a number of parameters that determine how the architecture search is performed. The most important ones are listed below:\n",
+    "\n",
+    "- **num_graph_nodes**: The number of latent variables used to represent the model.\n",
+    "- **arch_updates_per_epoch**: The number of architecture updates per training epoch. These updates affect the architecture weights $\\alpha$ indicating the relative contribution of each operation for a given computation step.\n",
+    "- **arch_learning_rate_max**: The initial learning rate of the architecture weight optimizer.\n",
+    "- **param_updates_per_epoch**: The number of parameter updates per epoch. Once the architecture updates are complete, the parameters associated with each operation are updated.\n",
+    "- **param_momentum**: The momentum of the parameter optimizer.\n",
+    "- **max_epochs**: The maximum number of epochs to run DARTS.\n",
+    "- **output_type**: The type of output to produce. In our case, we treat the outcome as a real variable, i.e., \"real\".\n",
+    "\n",
+    "\n",
+    "Let's set up the DARTS regressor with some default parameters."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from autora.skl.darts import DARTSRegressor\n",
+    "\n",
+    "darts_estimator = DARTSRegressor(\n",
+    "    num_graph_nodes=1,\n",
+    "    arch_updates_per_epoch=1,\n",
+    "    arch_learning_rate_max=0.001,\n",
+    "    param_updates_per_epoch=500,\n",
+    "    param_momentum=0.9,\n",
+    "    max_epochs=300,\n",
+    "    output_type=\"real\",\n",
+    "    primitives=primitives,\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now we have everything to run differentiable architecture search and visualize the model resulting from the highest architecture weights. Note that the current model corresponds to the model with the highest architecture weights."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "darts_estimator.fit(X, y)\n",
+    "darts_estimator.visualize_model()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can refine the fit by running the `fit` method again, after changing the parameters. This allows us to keep the same architecture but refit the parameters in the final sampled model, for example:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "darts_estimator.set_params(\n",
+    "    max_epochs=0,  # no epochs of architecture fitting\n",
+    "    param_updates_for_sampled_model=1000,  # 1000 steps of param optimiziation\n",
+    ")\n",
+    "darts_estimator.fit(X, y)\n",
+    "darts_estimator.visualize_model()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "To recover the initial model, we need to return the sampling strategy to the default `\"max\"`:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "darts_estimator.set_params(\n",
+    "    max_epochs=0,  # no epochs of architecture fitting\n",
+    "    sampling_strategy=\"max\",\n",
+    "    param_updates_for_sampled_model=1000,\n",
+    ")\n",
+    "darts_estimator.fit(X, y)\n",
+    "darts_estimator.visualize_model()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "As long as the architecture has not been refitted in the meantime, the architecture should be identical to the initial result, as the `sampling_strategy=\"max\"` is deterministic. The coefficients of the architecture functions may, however, be different, as they have different starting values compared to when they were initially set.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
