docs: update BMS simple example.ipynb

--- a/docs/User Guide/Theorists/BMS/example.ipynb
+++ b/docs/User Guide/Theorists/BMS/example.ipynb
@@ -60,7 +60,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now let us choose a prior over the primitives. In this case, we will use priors determined by Guimerà et al (2020).\n"
+    "Now let us define the search space, that is, the space of operations to consider when searching over the space of computation graphs."
    ],
    "metadata": {
     "collapsed": false
@@ -68,10 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "prior = \"Guimera2020\""
+    "primitives = {\n",
+    "    \"Psychology\": {\n",
+    "        \"addition\": 5.8,\n",
+    "        \"subtraction\": 4.3,\n",
+    "        \"multiplication\": 5.0,\n",
+    "        \"division\": 5.5,\n",
+    "    }\n",
+    "}"
    ],
    "metadata": {
     "collapsed": false
@@ -89,7 +96,7 @@
     "- **`ts`**: A list of temperature values. The machine scientist creates an equation tree for each of these values. Higher temperature trees are harder to fit, and thus they help prevent overfitting of the model.\n",
     "\n",
     "\n",
-    "Let's use the same priors over primitives that we specified on the previous page as well as an illustrative set of temperatures to set up the BMS regressor with default parameters.\n"
+    "Let's set up the BMS regressor with some default parameters.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -103,15 +110,6 @@
     "from autora.skl.bms import BMSRegressor\n",
     "\n",
     "temperatures = [1.0] + [1.04**k for k in range(1, 20)]\n",
-    "\n",
-    "primitives = {\n",
-    "    \"Psychology\": {\n",
-    "        \"addition\": 5.8,\n",
-    "        \"subtraction\": 4.3,\n",
-    "        \"multiplication\": 5.0,\n",
-    "        \"division\": 5.5,\n",
-    "    }\n",
-    "}\n",
     "\n",
     "bms_estimator = BMSRegressor(\n",
     "    epochs=1500,\n",
