docs: add content to BSR simple example.ipynb

--- a/docs/User Guide/Theorists/BSR/example.ipynb
+++ b/docs/User Guide/Theorists/BSR/example.ipynb
@@ -51,7 +51,94 @@
     "x_2 = np.linspace(0, 1, num=10)\n",
     "X = np.array(np.meshgrid(x_1, x_2)).T.reshape(-1,2)\n",
     "\n",
-    "y = 2 * X[:,0] + np.exp(5 * X[:,1])\n"
+    "y = 2 * X[:,0] + np.exp(5 * X[:,1])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Recall, the following are built-in operators which constitute the search space; that is, the space of operations to consider when searching over the space of computation graphs:\n",
+    "\n",
+    "- **\\+**: The output of the computation $x_j$ is the sum over its inputs $x_i, x_{ii}$: $x_j = x_i + x_{ii}$.\n",
+    "- **\\-**: The output of the computation $x_j$ is the respective difference between its inputs $x_i, x_{ii}$: $x_j = x_i - x_{ii}$.\n",
+    "- __\\*__: The output of the computation $x_j$ is the product over its two inputs $x_i, x_{ii}$: $x_j = x_i * x_{ii}$.\n",
+    "- **exp**: The output of the computation $x_j$ is the natural exponential function applied to its input $x_i$: $x_j = \\exp(x_i)$.\n",
+    "- **pow2**: The output of the computation $x_j$ is the square function applied to its input $x_i$: $x_j$ = $x_i^2$.\n",
+    "- **pow3**: The output of the computation $x_j$ is the cube function applied to its input $x_i$: $x_j$ = $x_i^3$.\n",
+    "- **sin**: The output of the computation $x_j$ is the sine function applied to its input $x_i$: $x_j = \\sin(x_i)$.\n",
+    "- **cos**: The output of the computation $x_j$ is the cosine function applied to its input $x_i$: $x_j = \\cos(x_i)$.\n",
+    "- **ln**: The output of the computation $x_j$ is the linear transformation applied to its input $x_i$: $x_j = a * x_i + b$, where $a$ and $b$ are slope and intercept parameters."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Set up the BSR Regressor\n",
+    "\n",
+    "We will use the BSR Regressor to predict the outcomes. There are a number of parameters that determine how search is performed. The most important ones are listed below:\n",
+    "\n",
+    "- `tree_num`: the number of expression trees to use in the linear mixture (final prediction model); also denoted by `K` in BSR.\n",
+    "- `iter_num`: the number of RJ-MCMC steps to execute (note: this can also be understood as the number of `K`-samples to take in the fitting process).\n",
+    "- `val`: the number of validation steps to execute following each iteration.\n",
+    "- `beta`: the hyperparameter that controls growth of a new expression tree. This needs to be < 0, and in general, smaller values of `beta` correspond to deeper expression trees.\n",
+    "\n",
+    "Let's set up the BSR regressor with some default parameters."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from autora.skl.bsr import BSRRegressor\n",
+    "\n",
+    "bsr_estimator = BSRRegressor(tree_num=3, itr_num=5000, val=100, beta=-1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now we have everything to run Bayesian Symbolic Regression and visualize the fitted model."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "bsr_estimator.fit(X, y)\n",
+    "y_pred = bsr_estimator.predict(X)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(X, y, \"o\")\n",
+    "plt.plot(X, y_pred, \"-\")\n",
+    "plt.show()\n"
    ],
    "metadata": {
     "collapsed": false
