docs: language updated to BMS exp_learning.ipynb

--- a/docs/User Guide/Theorists/BMS/exp_learning.ipynb
+++ b/docs/User Guide/Theorists/BMS/exp_learning.ipynb
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The other meta-parameters we need to set for BMS include a list of temperatures for its tree search, as well as the number of epochs we want BMS to run. We'll do that next in creating our BMSRegressor"
+    "The meta-parameters we need to set for BMS include a list of temperatures for its tree search, as well as the number of epochs we want BMS to run. We'll do that next in creating our BMSRegressor"
    ]
   },
   {
