docs: conform variable naming in BMS exp_learning.ipynb

--- a/docs/User Guide/Theorists/BMS/exp_learning.ipynb
+++ b/docs/User Guide/Theorists/BMS/exp_learning.ipynb
@@ -288,7 +288,7 @@
    "source": [
     "temperatures = [1.0] + [1.04**k for k in range(1, 20)]\n",
     "\n",
-    "bms = BMSRegressor(\n",
+    "bms_estimator = BMSRegressor(\n",
     "    epochs=1000,\n",
     "    prior_par=primitives,\n",
     "    ts=temperatures,\n",
@@ -13545,7 +13545,7 @@
     }
    ],
    "source": [
-    "bms.fit(X,y)"
+    "bms_estimator.fit(X,y)"
    ]
   },
   {
@@ -13617,7 +13617,7 @@
     }
    ],
    "source": [
-    "plot_exp_learning(bms)\n"
+    "plot_exp_learning(bms_estimator)\n"
    ]
   },
   {
